--- a/price-tracker-lib.opam
+++ b/price-tracker-lib.opam
@@ -12,10 +12,9 @@ build: [
 depends: [
   "jbuilder" {build & >= "1.0+beta14"}
   "batteries"
-  "cohttp-lwt-unix" { >= "1.0.0" }
+  "cohttp-lwt-unix" {>= "1.0.0"}
   "lambdasoup"
-  "lwt_ssl"
-  "telegraml"
+  "telegraml" {>= "2.1.5"}
   "sqlite3"
   "dolog"
 ]
