--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -2,10 +2,7 @@ FROM opam:alpine-arm64v8_ocaml-4.06.0
 
 WORKDIR /home/opam/src
 
-COPY TelegraML/telegraml.opam TelegraML/
-
-RUN opam pin add -yn telegraml TelegraML/ && \
-    opam depext -u telegraml
+RUN opam remote add dev git://github.com/joaosreis/opam-repository
 
 COPY price-tracker-exe.opam .
 
